envs/digitalocean/k8s/base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: placeholder
  template:
    metadata:
      labels:
        app: placeholder
    spec:
      containers:
        - name: placeholder
          image: registry.digitalocean.com/sohnandsol/placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: sohnandsol
