envs/digitalocean/k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: placeholder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
