envs/digitalocean/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: placeholder
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: placeholder
                port:
                  number: 3000
  tls:
    - hosts:
        - placeholder
      secretName: placeholder
